# box_tauri

./: .prettierrc  README.md  index.html  package.json  vite.config.js
src/: App copy.vue  App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: 1.rs  main.rs
src/assets/: base.scss
src/components/: Greet.vue
src/plugins/: router.js
src/views/crawler/: wallhaven.vue
src/views/home/: index.vue
src/views/home2/: index.vue
src/views/setting/: index.vue
