[package]
name = "box"
version = "0.0.0"
description = "孔大夫的工具箱"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.12" 
